WORKDONE: Added image; Additional HTML heading; HTML paragraph

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+        <a href="recipes/potato-salad.html" alt="">Potato Salad</a>
 </body>
 </html>
