--- a/recipes/potato-salad.html
+++ b/recipes/potato-salad.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Potato Salad Recipe</h1>
+    <img src="../assets/potato-salad-recipe-735x735.jpg" alt="bowl-of-potato-salad">
+    <h4>Classic Potato Salad just like someone's mom used to make, probably..</h4>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
 </body>
 </html>
