WORKDONE: first recipe added; light CSS tinkering

--- a/recipes/potato-salad.html
+++ b/recipes/potato-salad.html
@@ -4,14 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css" media="screen" />
     <title>Potato Salad</title>
 </head>
 <body>
     <h1>Potato Salad Recipe</h1>
     <img src="../assets/potato-salad-recipe-735x735.jpg" alt="bowl-of-potato-salad">
-    <h4>Classic Potato Salad just like someone's mom used to make, probably..</h4>
+    <h3>Classic Potato Salad just like someone's mom used to make, probably...</h3>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Potato salad is a dish made from boiled potatoes and a variety of other ingredients. It is generally considered a side dish, as it usually accompanies the main course. Potato salad is widely believed to have originated in Germany, spreading largely throughout Europe, European colonies and later Asia.
         </p>
+        <p>
+            American potato salad most likely originated from recipes brought to the U.S. by way of German and other European immigrants during the nineteenth century.[2][1] American-style potato salad is served cold or at room temperature. Ingredients often include mayonnaise or a mayonnaise-like substitute (such as yogurt or sour cream), herbs, and vegetables (such as onion and celery).[3] Asian-style potato salad is similar to American-style potato salad, but has a sweeter and eggier flavor.
+        </p>
+        <h4>Ingredients</h4>
+            <ul>
+                <li>Potatoes - 2lbs.</li>
+                <li>Eggs - 6 hard boiled</li>
+                <li>Apple Cider Vinegar - 2 tblspns</li>
+                <li>Salt - 1/2 teaspoon</li>
+                <li>Mayonnaise - 2 Cups</li>
+                <li>Scallions - 2 Cups, chopped</li>
+                <li>Celery - 1 stalk, chopped</li>
+                <li>Dijon Mustard - 1 tblspn</li>
+                <li>Sugar - 1 teaspoon</li>
+            </ul>
+        <h4>Method</h4>
+            <ol>
+                <li>Hard Boil and then chop Eggs</li>
+                <li>Peel (optional) and boil and then chop potatoes</li>
+                <li>Dice Celery</li>
+                <li>Chop Scallions</li>
+                <li>In large mixing bowl, add all ingredients</li>
+                <li>Gently stir until all ingredients binded by mayonnaise</li>
+                <li>Chill, then serve</li>
+            </ol>
 </body>
 </html>
