--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-        <a href="recipes/potato-salad.html" alt="">Potato Salad</a>
+    <ul>
+        <li><a href="/recipes/potato-salad.html" alt="">Potato Salad</a></li>
+        <li><a href="/recipes/tn-meatloaf.html" alt="">Tennessee Meatloaf</a></li>
+        
+    </ul>
 </body>
 </html>
