WORKDONE: Added Black Bean Burger recipe; Cleaned up code.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="/recipes/potato-salad.html" alt="">Potato Salad</a></li>
         <li><a href="/recipes/tn-meatloaf.html" alt="">Tennessee Meatloaf</a></li>
+        <li><a href="/recipes/black-bean-burger.html" alt="">Black-Bean Veggie Burger</a></li>
         
     </ul>
 </body>
