WORKDONE: Added some very mild flair to home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Odin's Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Must Eat.</h1>
+    <img src="assets/kitchen-on-fire.jpg" alt="kitchen-on-fire" />
+    <h3>Some recipes I'll likely not try anytime soon.</h3>
     <ul>
         <li><a href="/recipes/potato-salad.html" alt="">Potato Salad</a></li>
         <li><a href="/recipes/tn-meatloaf.html" alt="">Tennessee Meatloaf</a></li>
